# Caknn

./: .gitattributes  .gitignore  .swo  .swp  BaseExpansion.h  CMakeLists.txt  DistElement.h  Expansion.h  Experiment.h  Graph.h  IleMinExpansion.h  IleSumExpansion.h  LC.h  MAD.h  MovingObject.h  Opf.h  PartialMatrix.h  Query.h  Result.h  SDB.h  SLEExpansion.h  SafeRegion.h  Utility.h  alaska.lmrk  alaska.mobj  alaska.poi  caknn.cbp  caknn.depend  main.cpp
Aggregate/: AggFunc  AggFunc.cpp  AggFunc.h  AggMaxFunc.h  AggMinFunc.h  AggSumFunc.h  DistMatrix.cpp  DistMatrix.h  EdgeObj.cpp  EdgeObj.h  Landmark.cpp  Landmark.h  MatrixDiskIO.cpp  MatrixDiskIO.h  MovingObj.h  RoadNetwork.cpp  RoadNetwork.h  Utility.h
Scripts/: GenParameters.py  PainfulMasterDo.py  PainfulSlaveDo.py  caknn.result  painful.configlist  run.bash
blockfile/: blk_file.cpp  blk_file.h  cache.cpp  cache.h  f_def.cpp  f_def.h  f_def.h.bak
btree/: b-def.h  b-entry.cpp  b-entry.h  b-node.cpp  b-node.h  b-tree.cpp  b-tree.h
build-dir/: CMakeCache.txt  CaknnSR  Makefile  cmake_install.cmake
config/: experiment.config
gadget/: gadget.cpp  gadget.h
heap/: binheap.cpp  binheap.h  heap.cpp  heap.h
test/: test.5.50.mobj  test.b  test.cedge  test.cnode  test.lmrk  test.m  test.mobj
